--- a/assign/views/Host/Edit-Home.ejs
+++ b/assign/views/Host/Edit-Home.ejs
@@ -8,8 +8,8 @@
         <div class="w-full p-4 px-5 py-5">
           <div class="text-center mb-4">
             <h1 class="text-gray-800 font-bold text-2xl"><%= editing ? "Edit" :" Register" %>House</h1>
-          </div>
-          <form action="/<%= editing ? "Homedit" :" Edit-Home" %>" method="POST">
+          </div> 
+          <form action="/Host/<%= editing ? "Homedit" :" Edit-Home" %>" method="POST">
             <div class="mb-4">
               <input type="hidden" name="id" value="<%= editing ? house.id :'' %>">
               <label class="block text-gray-700 text-sm font-bold mb-2" for="houseName">House Name</label>
