--- a/assign/views/Host/Homedit.ejs
+++ b/assign/views/Host/Homedit.ejs
@@ -39,7 +39,7 @@
                     <% } %>
                   <% } %>
                 </p>
-                <a href="/Host/Edit-home/<%= house.id%>?editing=true" class="bg-blue-500 p-4">Edit</a>
+                <a href="/edit-home/<%= house.id%>?editing=true" class="bg-blue-500 p-4">Edit</a>
                 <button class="bg-red-500 p-4">Delete</button>
               </div>
             </div>
