--- a/Mongoose/views/Host/Edit-Home.ejs
+++ b/Mongoose/views/Host/Edit-Home.ejs
@@ -11,7 +11,7 @@
           </div> 
           <form action="/edit-home" method="POST">
             <div class="mb-4">
-              <input type="hidden" name="id" value="<%= editing ? house. :'' %>">
+              <input type="hidden" name="id" value="<%= editing ? house :'' %>">
               <label class="block text-gray-700 text-sm font-bold mb-2" for="houseName">House Name</label>
               <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="text" name="housename" placeholder="Enter house name" value="<%= editing ? house.housename :'' %>">
             </div>
