--- a/Mongoose/views/Store/HomeList.ejs
+++ b/Mongoose/views/Store/HomeList.ejs
@@ -41,7 +41,7 @@
               
               <!-- Buttons -->
               <div class="flex justify-between items-center">
-                <a class="bg-teal-500 text-white px-4 py-2 rounded hover:bg-teal-600 transition-colors" href="/HomeList/<%= house. %>">Details</a>
+                <a class="bg-teal-500 text-white px-4 py-2 rounded hover:bg-teal-600 transition-colors" href="/HomeList/<%= house%>">Details</a>
                 <%- include('../partials/form',{house:house}) %>
                 <button class="bg-teal-500 text-white px-4 py-2 rounded hover:bg-teal-600 transition-colors">Book</button>
               </div>
